[gd_scene load_steps=5 format=2]

[ext_resource path="res://asserts/ttf/FiraCode-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://design/ToolBar.gd" type="Script" id=2]
[ext_resource path="res://design/Designer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Root" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 3 )

[node name="ToolBarSpliter" type="VSplitContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ToolBar" type="HFlowContainer" parent="ToolBarSpliter"]
margin_right = 1920.0
margin_bottom = 32.0
rect_min_size = Vector2( 1920, 32 )
script = ExtResource( 2 )

[node name="FileMenu" type="Button" parent="ToolBarSpliter/ToolBar"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
custom_fonts/font = SubResource( 1 )
text = "File"

[node name="FilePopMenu" type="PopupMenu" parent="ToolBarSpliter/ToolBar"]
margin_left = -132.0
margin_top = 64.0
margin_right = -112.0
margin_bottom = 84.0

[node name="PopupMenu" type="PopupMenu" parent="ToolBarSpliter/ToolBar"]
margin_right = 20.0
margin_bottom = 20.0

[node name="WorkspaceSpliter" type="VSeparator" parent="ToolBarSpliter"]
margin_top = 44.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ViewSpliter" type="VSeparator" parent="ToolBarSpliter/WorkspaceSpliter"]
margin_right = 4.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 1048 )

[node name="ConfigScrollContainer" type="ScrollContainer" parent="ToolBarSpliter/WorkspaceSpliter/ViewSpliter"]
margin_left = 480.0
margin_right = 960.0
margin_bottom = 1048.0

[node name="ConfigTree" type="Tree" parent="ToolBarSpliter/WorkspaceSpliter/ViewSpliter/ConfigScrollContainer"]
margin_right = 480.0
margin_bottom = 1048.0

[node name="MemberScrollContainer" type="ScrollContainer" parent="ToolBarSpliter/WorkspaceSpliter/ViewSpliter"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 480, 1048 )

[node name="MemberTree" type="Tree" parent="ToolBarSpliter/WorkspaceSpliter/ViewSpliter/MemberScrollContainer"]
margin_right = 480.0
margin_bottom = 1048.0
rect_min_size = Vector2( 480, 1048 )
